mealie-2-bring/mealie-2-bring-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-2-bring
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie-2-bring
  template:
    metadata:
      labels:
        app: mealie-2-bring
    spec:
      containers:
        - name: mealie-2-bring
          image: ghcr.io/mealie-recipes/mealie
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"    
            limits:
              memory: "200Mi"
              cpu: "100m"            
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-2-bring
  namespace: mealie
spec:
  selector:
    app: mealie-2-bring
  ports:
    - protocol: TCP
      port: 12000
      targetPort: 9000
  type: LoadBalancer
