mealie-2-bring/mealie-2-bring-postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-2-bring-database
  namespace: mealie  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie-2-bring-database
  template:
    metadata:
      labels:
        app: mealie-2-bring-database
    spec:
      containers:
        - name: mealie-2-bring-database
          image: postgres:15
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"    
            limits:
              memory: "200Mi"
              cpu: "100m"       
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-2-bring-database
  namespace: mealie  
spec:
  selector:
    app: mealie-2-bring-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
