mealie-2-bring/mealie-2-bring-py-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-2-bring-api
  namespace: mealie-2-bring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie-2-bring-api
  template:
    metadata:
      labels:
        app: mealie-2-bring-api
    spec:
      #hostNetwork: true
      containers:
        - name: mealie-2-bring-api
          image: ghcr.io/felixschndr/mealie-bring-api:latest
          ports:
            - containerPort: 8742
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"    
            limits:
              memory: "200Mi"
              cpu: "100m"      
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-2-bring-api
  namespace: mealie-2-bring 
spec:
  selector:
    app: mealie-2-bring-api
  ports:
    - protocol: TCP
      port: 8742
      targetPort: 8742
  type: LoadBalancer
