mealie-2-bring/mealie-2-bring-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mealie-2-bring-allow-egress
  namespace: mealie
spec:
  podSelector:
    matchLabels:
      app: mealie-2-bring-api
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
